--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@google-cloud/secret-manager": "^5.6.0",
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
